# cpp-base-project

./: .codecov  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: dummy.cpp  dummy.h
tests/: CMakeLists.txt  dummyTest.h  main.cpp  memoryleaks.cpp  memoryleaks.h  memoryleaksTest.h  memorytest.cpp  memorytest.h
